Finalizando passo 8 e refatorando classes